@@ -57,51 +57,42 @@ public class sndintrfH {
     public static final int SOUND_YM2610 = 8;
     public static final int SOUND_YM2610B = 9;
     public static final int SOUND_YM2612 = 10;
-    public static final int SOUND_YM3438 = 11;
-    /* same as YM2612 */
-    public static final int SOUND_YM2413 = 12;
-    /* YM3812 with predefined instruments */
+    public static final int SOUND_YM3438 = 11;/* same as YM2612 */
+    public static final int SOUND_YM2413 = 12;/* YM3812 with predefined instruments */
     public static final int SOUND_YM3812 = 13;
-    public static final int SOUND_YM3526 = 14;
-    /*100% YM3812 compatible, less features */
+    public static final int SOUND_YM3526 = 14;/*100% YM3812 compatible, less features */
     public static final int SOUND_YMZ280B = 15;
-    public static final int SOUND_Y8950 = 16;
-    /* YM3526 compatible with delta-T ADPCM */
+    public static final int SOUND_Y8950 = 16;/* YM3526 compatible with delta-T ADPCM */
     public static final int SOUND_SN76477 = 17;
     public static final int SOUND_SN76496 = 18;
     public static final int SOUND_POKEY = 19;
-    public static final int SOUND_NES = 20;
-    public static final int SOUND_ASTROCADE = 21;
-    /* Custom I/O chip from Bally/Midway */
-    public static final int SOUND_NAMCO = 22;
-    public static final int SOUND_TMS36XX = 23;
-    /* currently TMS3615 and TMS3617 */
-    public static final int SOUND_TMS5110 = 24;
-    public static final int SOUND_TMS5220 = 25;
-    public static final int SOUND_VLM5030 = 26;
-    public static final int SOUND_ADPCM = 27;
-    public static final int SOUND_OKIM6295 = 28;
-    /* ROM-based ADPCM system */
-    public static final int SOUND_MSM5205 = 29;
-    /* CPU-based ADPCM system */
-    public static final int SOUND_UPD7759 = 30;
-    /* ROM-based ADPCM system */
-    public static final int SOUND_HC55516 = 31;
-    /* Harris family of CVSD CODECs */
-    public static final int SOUND_K005289 = 32;
-    /* Konami 005289 */
-    public static final int SOUND_K007232 = 33;
-    /* Konami 007232 */
-    public static final int SOUND_K051649 = 34;
-    /* Konami 051649 */
-    public static final int SOUND_K053260 = 35;
-    /* Konami 053260 */
-    public static final int SOUND_SEGAPCM = 36;
-    public static final int SOUND_RF5C68 = 37;
-    public static final int SOUND_CEM3394 = 38;
-    public static final int SOUND_C140 = 39;
-    public static final int SOUND_QSOUND = 40;
-    public static final int SOUND_COUNT = 41;
+    public static final int SOUND_TIA = 20;/* stripped down Pokey */
+    public static final int SOUND_NES = 21;
+    public static final int SOUND_ASTROCADE = 22;/* Custom I/O chip from Bally/Midway */
+    public static final int SOUND_NAMCO = 23;
+    public static final int SOUND_TMS36XX = 24;/* currently TMS3615 and TMS3617 */
+    public static final int SOUND_TMS5110 = 25;
+    public static final int SOUND_TMS5220 = 26;
+    public static final int SOUND_VLM5030 = 27;
+    public static final int SOUND_ADPCM = 28;
+    public static final int SOUND_OKIM6295 = 29;/* ROM-based ADPCM system */
+    public static final int SOUND_MSM5205 = 30;/* CPU-based ADPCM system */
+    public static final int SOUND_UPD7759 = 31;/* ROM-based ADPCM system */
+    public static final int SOUND_HC55516 = 32;/* Harris family of CVSD CODECs */
+    public static final int SOUND_K005289 = 33;/* Konami 005289 */
+    public static final int SOUND_K007232 = 34;/* Konami 007232 */
+    public static final int SOUND_K051649 = 35;/* Konami 051649 */
+    public static final int SOUND_K053260 = 36;/* Konami 053260 */
+    public static final int SOUND_SEGAPCM = 37;
+    public static final int SOUND_RF5C68 = 38;
+    public static final int SOUND_CEM3394 = 39;
+    public static final int SOUND_C140 = 40;
+    public static final int SOUND_QSOUND = 41;
+    public static final int SOUND_SAA1099 = 42;
+    public static final int SOUND_SPEAKER = 43;
+    public static final int SOUND_WAVE = 44;
+    public static final int SOUND_BEEP = 45;
+    public static final int SOUND_COUNT = 46;
 
 
     /* structure for SOUND_CUSTOM sound drivers */
