@@ -21,6 +21,7 @@
 -Added ZX Spectrum +3e driver
 -Added ZX Spectrum +4 driver
 -Sound, tape and disk emulation for all ZX Spectrum models not implemented
+-Added speaker sound emulation (not tested)
 
 22/07/2018
 ==========
